# NarradorFutbol

./: .containerignore  .env.example  .gitignore  Containerfile  README.md  compose.yaml  control_tui.bat  narracíón-01_2026-06-20.txt  podman_tui.bat  podman_tui.py  prompt_01.md  pyproject.toml  requirements.txt  subir_repo.bat
app/: streamlit_app.py
app/pages/: 00_Login.py  01_Ingesta.py  02_Partidos.py  03_Analisis.py  04_Graficas_Avanzadas.py
input/: .gitkeep
output/: .gitkeep
src/: __init__.py  config.py
src/analytics/: __init__.py  advanced_charts.py  advanced_metrics.py  ai_context.py  dangerous_attacks.py  db.py  dominance_analysis.py  key_moments.py  match_summary.py  match_validation.py  momentum.py  pass_analysis.py  pitch.py  player_stats.py  possession_analysis.py  pressure_analysis.py  run_analysis.py  shot_analysis.py  team_stats.py  xg_analysis.py
src/benchmark/: __init__.py  benchmark_cases.py  benchmark_checks.py  benchmark_report.py  benchmark_runner.py  generic_narrative_checks.py  generic_report.py  generic_validation.py  narrative_regression.py  run_benchmark.py
src/comparison/: __init__.py  comparison_narrative.py  comparison_report.py  match_comparison.py  player_comparison.py  player_comparison_narrative.py  player_comparison_report.py  player_visuals.py  run_match_comparison.py  run_player_comparison.py
src/ingestion/: __init__.py  download_360.py  download_competitions.py  download_events.py  download_lineups.py  download_matches.py  ingestion_log.py  run_ingestion.py  utils.py
src/narrative/: __init__.py  config.py  fact_guard.py  narrative_store.py  narrator.py  prompt_builder.py  quality_checker.py  review_report.py  run_narrator.py  templates.py  tone_comparison.py
src/narrative_v2/: __init__.py  narrator_v2.py  prompt_builder_v2.py  run_narrator_v2.py  section_builder.py  style_evaluator.py  style_profiles.py
src/reports/: __init__.py  branding.py  docx_report.py  html_report.py  markdown_report.py  pdf_report.py  report_builder.py  report_history.py  report_store.py  run_report.py  tab_pdf.py
src/scouting/: __init__.py  player_archetypes.py  run_scouting.py  run_scouting_v2.py  scouting_context.py  (+9 more)
tests/: test_advanced_charts.py  test_security.py  test_tab_pdf.py
(+26 files in other folders)
