[project]
name = "narrador-futbol"
version = "0.1.0"
description = "Base de ingesta raw para Narrador Inteligente de Futbol con StatsBomb Open Data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb",
    "markdown>=3.10.2",
    "matplotlib>=3.11.0",
    "mplsoccer>=1.6.1",
    "openai>=2.43.0",
    "pandas",
    "plotly>=6.8.0",
    "pyarrow",
    "python-docx>=1.2.0",
    "python-dotenv",
    "reportlab>=5.0.0",
    "statsbombpy",
    "streamlit>=1.58.0",
    "textual>=8.2.7",
    "tqdm",
    "weasyprint>=69.0",
]

[dependency-groups]
dev = [
    "black>=25.0.0",
    "mypy>=1.18.0",
    "pytest>=8.0.0",
    "ruff>=0.14.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
ignore_missing_imports = true
follow_imports = "silent"
no_strict_optional = true
check_untyped_defs = false
warn_unused_ignores = false

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--basetemp=.tmp/pytest"
